feat: clear items from cart api
